# SEDAC-V7.0-Pre-release-Test-Version

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_draft_model.py  collect_data.py  diag.py  patch_vllm_openai_metrics.py  patch_vllm_surgical.py  patch_vllm_surgical_v61.py  qwen7b_vllm_bench.py  requirements.txt  sedac_calibrate.py  sedac_calibrate_auto.py  sedac_collect_data.py  sedac_config.json  sedac_offline_bench.py  sedac_pick_tap_layer.py  sedac_start_server.py  sedac_test.py  sedac_test_suite.py  train_exit_head.py  train_probe.py
configs/: spec_ngram_t8_n8.json  test_matrix.json  test_matrix_full.json  test_matrix_speed.json  test_matrix_suffix.json
cpp/bench_client/: CMakeLists.txt  README.md  bench_client.cpp  build.sh  sedac_bench_client
docs/: SEDAC_V6.1_DESIGN.md  SEDAC_V6_MATH.md  SEDAC_V7_DESIGN.md
logs/: PPL_LOSS_REPORT.md  SPEEDUP_REPORT.md  SUMMARY.md  TEST_REPORT.md  V7_FULL_LAYER_REPORT.md  V7_SPEEDUP_REPORT.md
sedac-core/: Cargo.toml  pyproject.toml
sedac-core/python/sedac_core/: __init__.py  fallback.py
sedac-core/src/: lib.rs
sedac/core/: __init__.py  universal_monitor.py
sedac/integrations/: __init__.py
